--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@ form {
     padding: 1em;
     border: 1px solid #CCC;
     border-radius: 1em;
+    margin-top : 20px;
 }
 form div + div {
     margin-top: 1em;
