--- a/assets/style.css
+++ b/assets/style.css
@@ -60,7 +60,7 @@ td{
 .menu{
   font-family: "Verdana" ,sans-serif;
   font-size: 10px;
-  background: white;
+  background: #9e9798;
 	padding:30px;
 }
 li.menus{
@@ -103,6 +103,7 @@ ol.test{
   background-color : #9e9798;
   font-family : "Verdana", sans-serif;
   font-size : 15px;
+  color : black;
   border-radius : 100px;
   margin-left : 50px;
   margin-right : 50px; 
@@ -111,4 +112,9 @@ ol.test{
   padding-left : 50px;
   padding-right : 50px;
   list-style-type : none;
+}
+@media print {
+  #menu, h1 {
+   display:none;
+  }
 }
